[gd_scene load_steps=5 format=2]

[ext_resource path="res://UI/Equipment/EquipSlot/EquipSlot.gd" type="Script" id=1]
[ext_resource path="res://shared/fonts/OpenSans_NormalText.tres" type="DynamicFont" id=2]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.168627, 0.168627, 0.168627, 1 )
draw_center = false
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 10

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.168627, 0.168627, 0.168627, 1 )
draw_center = false
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_right = 10

[node name="EquipSlot" type="Control"]
margin_right = 220.0
margin_bottom = 47.0
rect_min_size = Vector2( 220, 47 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
slot_name = "Head"

[node name="PanelLeft" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelRight" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SlotLabel" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0.470588 )
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = -27.0
margin_right = 50.0
margin_bottom = -7.0
custom_fonts/font = ExtResource( 2 )
text = "Head"
__meta__ = {
"_edit_use_anchors_": false
}
